--- a/docs/main.tex
+++ b/docs/main.tex
@@ -19,6 +19,7 @@
 \usepackage{icomma}
 \usepackage{dirtree}
 \usepackage{fancyhdr}
+\usepackage{minted}
 
 \fancypagestyle{plain}{%
 \fancyhf{} % clear all header and footer fields
