--- a/docs/tools.tex
+++ b/docs/tools.tex
@@ -47,6 +47,16 @@ lecz te funkcjonalności nie są potrzebne dla symulacji opisywanej platformy. N
 		\item[\texttt{rostopic}] Narzędzie do zarządzania węzłami, wysyłania i podglądania strumieni komunikacyjnych.
 		\item[\texttt{roscore}] Demon ROS, zarządzający wszystkimi węzłami.
 	\end{description}
+	Dodatkowo, używane funkcjonalności funkcji bibliotecznych:
+	\begin{itemize}
+		\item Rejestracja nowego węzła w demonie ROS.
+		\item Stworzenie nadajnika strumienia wiadomości.
+		\item Stworzenie odbiornika strumienia wiadomości.
+		\item Powiadomienia.
+		\item Nadawanie macierzy przekształceń jednorodnych.
+		\item Zawieszenie programu.
+	\end{itemize}
+
 
 \section{Gazebo}
 	Gazebo \cite{gazebo_website} jest symulatorem graficznym, działającym na podstawie uprzednio przygotowanych plików konfiguracyjnych.
